--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "jest"
+    "test": "env DB_ENV=testing jest"
   },
   "keywords": [],
   "author": "Lambda School",
