--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "env DB_ENV=testing jest"
+    "test": "cross-env DB_ENV=testing jest --watch --verbose"
   },
   "keywords": [],
   "author": "Lambda School",
@@ -17,6 +17,7 @@
     "sqlite3": "^4.1.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.2",
     "eslint": "^6.8.0",
     "jest": "^25.2.1",
     "nodemon": "^2.0.2"
